init custom style

--- a/cars/index.html
+++ b/cars/index.html
@@ -1,8 +1,16 @@
 ---
 layout: page
-title: Chìa khóa Ô tô
+title: Chìa khóa Ô tô Buôn Ma Thuột
 description: Làm chìa khóa, chìa từ (chip điện tử), điều khiển từ xa (remote) xe hơi
 group: mainmenu
 ---
 {% include JB/setup %}
-Liên hệ 0905748973 (gặp Tiến)
+
+<div class="call-now">
+	<h3>Gọi ngay</h3>
+	<div class="call-button">
+		<a href="tel:(+84)0905748973">
+			<h1>0905.748.973</h1> 
+		</a>
+	</div>
+</div>
