--- a/keys/index.html
+++ b/keys/index.html
@@ -1,8 +1,16 @@
 ---
 layout: page
-title: Chìa
+title: Bán sỉ và lẻ phôi chìa khóa
 description: Bán phôi chìa khóa
 group: mainmenu
 ---
 {% include JB/setup %}
-Liên hệ 01224512545 (gặp Thắng)
+
+<div class="call-now">
+	<h3>Gọi ngay</h3>
+	<div class="call-button">
+		<a href="tel:(+84)01224512545">
+			<h1>01224512545</h1> 
+		</a>
+	</div>
+</div>
