--- a/locks/index.html
+++ b/locks/index.html
@@ -4,4 +4,12 @@ title: Khóa
 description: Bán khóa
 ---
 {% include JB/setup %}
-Liên hệ 01224512545 (gặp Thắng)
+
+<div class="call-now">
+	<h3>Gọi ngay</h3>
+	<div class="call-button">
+		<a href="tel:(+84)01224512545">
+			<h1>01224512545</h1> 
+		</a>
+	</div>
+</div>
