--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,15 @@ description: Về chúng tôi
 group: mainmenu
 ---
 {% include JB/setup %}
+<div class="call-now">
+	<h3>Gọi ngay</h3>
+	<div class="call-button">
+		<a href="tel:(+84)0905748973">
+			<h1>0905.748.973</h1> 
+		</a>
+	</div>
+</div>
+
 <h3>
 <a id="dịch-vụ-sửa-khoá-chuyên-nghiệp-tiến-phát" class="anchor" href="#d%E1%BB%8Bch-v%E1%BB%A5-s%E1%BB%ADa-kho%C3%A1-chuy%C3%AAn-nghi%E1%BB%87p-ti%E1%BA%BFn-ph%C3%A1t" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dịch vụ sửa khoá chuyên nghiệp Tiến Phát</h3>
 
