--- a/safes/index.html
+++ b/safes/index.html
@@ -1,8 +1,16 @@
 ---
 layout: page
-title: Két sắt
+title: Mở két sắt
 description: Mở và sửa két sắt
 group: mainmenu
 ---
 {% include JB/setup %}
-Liên hệ 0905748973 (gặp Tiến)
+
+<div class="call-now">
+	<h3>Gọi ngay</h3>
+	<div class="call-button">
+		<a href="tel:(+84)0905748973">
+			<h1>0905.748.973</h1> 
+		</a>
+	</div>
+</div>
