add info to TPservices

--- a/safes/index.html
+++ b/safes/index.html
@@ -1,10 +1,18 @@
 ---
 layout: page
-title: Mở két sắt
+title: Sửa chữa, mở két sắt tại nhà
 description: Mở và sửa két sắt
 group: mainmenu
 ---
 {% include JB/setup %}
+
+Tiệm khóa Tiến Phát chuyên xử lý các trục trặc, các xự cố liên quan tới két sắt như: mất chìa, quên mã số,... Các dịch vụ sửa chữa, mở két sắt tại Tiến Phát:
+<ul>
+<li>Mở và làm lại chìa khoá</li>
+<li>Dò tìm mã số.</li>
+<li>Hướng dẫn thay đổi mã số két</li>
+<li>Cài đặt lại mã số mới cho quý khách</li>
+</ul>
 
 <div class="call-now">
 	<h3>Gọi ngay</h3>
@@ -14,3 +22,5 @@ group: mainmenu
 		</a>
 	</div>
 </div>
+
+
