--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,19 @@ group: mainmenu
 	</div>
 </div>
 
+<!--
+- Mở khóa
+- Sao chép chìa khóa bằng máy
+- Mở khóa nhà, khóa cơ quan, khóa văn phòng
+- Điều khiển từ xa xe ô tô, remote xe hơi
+- Điều khiển từ xa cửa cuốn
+- Mở khóa két sắt
+- Bán phôi chìa khóa
+- Bán khóa dân dụng
+-->
+
+
+
 <h3>
 <a id="dịch-vụ-sửa-khoá-chuyên-nghiệp-tiến-phát" class="anchor" href="#d%E1%BB%8Bch-v%E1%BB%A5-s%E1%BB%ADa-kho%C3%A1-chuy%C3%AAn-nghi%E1%BB%87p-ti%E1%BA%BFn-ph%C3%A1t" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dịch vụ sửa khoá chuyên nghiệp Tiến Phát</h3>
 
@@ -123,5 +136,3 @@ Tiệm Khoá Tiến Phát
 ĐT: 05003 939 959      DĐ: 0905748973(Mr. Tiến)<br>
 Facebook page: <a href="https://www.facebook.com/tienphatexpertkeyworld">https://www.facebook.com/tienphatexpertkeyworld</a><br>
 Hotline: 0905 748973(Mr. Tiến)</p>
-
-<p><img src="banghieu.jpg" alt="Tiệm khóa Tiến Phát, 05 Nguyễn Văn Cừ, TP.Buôn Ma Thuột"></p>
