--- a/keys/index.html
+++ b/keys/index.html
@@ -13,7 +13,8 @@ Tiệm khóa Tiến Phát bán sỉ và lẻ phôi chìa khóa các loại tại
 <ul>
 {% for key in site.data.keys %}
   <li>
-    {{ key.name }} -- {{ key.price}}
+    <img src="http://placehold.it/200x200">
+    <p>{{ key.name }} -- {{ key.price}}<p>
   </li>
 {% endfor %}
 </ul>
