--- a/locks/index.html
+++ b/locks/index.html
@@ -11,7 +11,8 @@ Tiệm khóa Tiến Phát bán sỉ và lẻ các loại khóa treo, khóa cửa
 <ul>
 {% for lock in site.data.locks %}
   <li>
-    {{ lock.name }} -- {{ lock.price}}
+    <img src="http://placehold.it/200x200">
+    <p>{{ lock.name }} -- {{ lock.price}}</p>
   </li>
 {% endfor %}
 </ul>
