--- a/locks/index.html
+++ b/locks/index.html
@@ -9,31 +9,30 @@ Tiệm khóa Tiến Phát bán sỉ và lẻ các loại khóa treo, khóa cửa
 
 <!-- Hình ảnh giới thiệu sản phẩm -->
 <ul class="products">
-{% for lock in site.data.locks %}
+  {% for lock in site.data.locks %}
   <li>
-  	<a href="#">
-	    <img src="http://placehold.it/200x200">
-	    <h4>{{ lock.name }}</h4>
-	    <p>{{ lock.price}}</p>
-  	</a>
-  </li>
-{% endfor %}
+    <a href="#">
+     <img src="http://placehold.it/200x200">
+     <h4>{{ lock.name }}</h4>
+     <p>{{ lock.price}}</p>
+   </a>
+ </li>
+ {% endfor %}
 </ul>
 
 
 <div class="call-now">
-	<h3>Gọi ngay</h3>
-	<div class="call-button">
-		<a href="tel:(+84)01224512545">
-			<h1>01224512545</h1> 
-		</a>
-	</div>
+  <h3>Gọi ngay</h3>
+  <div class="call-button"><a href="tel:(+84)01224512545">
+    <h1>01224512545</h1> 
+  </a>
+</div>
 </div>
 
 <h3>Bản đồ</h3>
 <div class="location">
-<h4>Tiệm khóa Tiến Phát</h4>
-<p><strong>Địa chỉ:</strong> 5 Nguyễn Văn Cừ, TP. Buôn Ma Thuột, Tỉnh Dak Lak</p>
+  <h4>Tiệm khóa Tiến Phát</h4>
+  <p><strong>Địa chỉ:</strong> 5 Nguyễn Văn Cừ, TP. Buôn Ma Thuột, Tỉnh Dak Lak</p>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.3182384608685!2d108.06284656893095!3d12.692639994314332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3171f7c4374bdd6f%3A0x89961b2411afda4e!2zVGnhu4dtIEtow7NhIFRp4bq_biBQaMOhdA!5e0!3m2!1svi!2s!4v1456590906784" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.3182384608685!2d108.06284656893095!3d12.692639994314332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3171f7c4374bdd6f%3A0x89961b2411afda4e!2zVGnhu4dtIEtow7NhIFRp4bq_biBQaMOhdA!5e0!3m2!1svi!2s!4v1456590906784" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
