--- a/search/index.html
+++ b/search/index.html
@@ -37,8 +37,7 @@ description: Tìm kiếm sản phẩm trên trang sửa khóa Buôn Ma Thuột
                   href="#"
                   data-path=".product-name"
                   data-order="asc"
-                  data-type="text"
-                  data-default="true">Tên A-Z</a>
+                  data-type="text">Tên A-Z</a>
             </li>
 
             <li role="presentation">
@@ -80,31 +79,10 @@ description: Tìm kiếm sản phẩm trên trang sửa khóa Buôn Ma Thuột
                   role="menuitem"
                   tabindex="-1"
                   href="#"
-                  data-path=".date"
+                  data-path=".product-common"
                   data-order="asc"
-                  data-type="datetime">Mới nhất</a>
-            </li>
-
-            <li role="presentation">
-              <a
-                  role="menuitem"
-                  tabindex="-1"
-                  href="#"
-                  data-path=".date"
-                  data-order="desc"
-                  data-type="datetime">Cũ nhất</a>
-            </li>
-
-            <li role="presentation" class="divider"></li>
-
-            <li role="presentation">
-              <a
-                  role="menuitem"
-                  tabindex="-1"
-                  href="#"
-                  data-path=".date"
-                  data-order="desc"
-                  data-type="datetime">Độ liên quan</a>
+                  data-type="number"
+                  data-default="true">Phổ biến nhất</a>
             </li>
 
             <li role="presentation">
@@ -116,26 +94,16 @@ description: Tìm kiếm sản phẩm trên trang sửa khóa Buôn Ma Thuột
                   data-order="desc"
                   data-type="datetime">Hàng mới nhập</a>
             </li>
-
-            <li role="presentation">
-              <a
-                  role="menuitem"
-                  tabindex="-1"
-                  href="#"
-                  data-path=".date"
-                  data-order="asc"
-                  data-type="datetime">Bán chạy nhất</a>
-            </li>
-
-            <li role="presentation">
-              <a
-                  role="menuitem"
-                  tabindex="-1"
-                  href="#"
-                  data-path=".date"
-                  data-order="desc"
-                  data-type="datetime">Giảm giá nhiều nhất</a>
-            </li>
+            <!--
+                        <li role="presentation">
+                          <a
+                              role="menuitem"
+                              tabindex="-1"
+                              href="#"
+                              data-path=".discount"
+                              data-order="desc"
+                              data-type="number">Giảm giá nhiều nhất</a>
+                        </li>-->
           </ul>
         </div>
       </div>
@@ -149,9 +117,15 @@ description: Tìm kiếm sản phẩm trên trang sửa khóa Buôn Ma Thuột
         <a href="#" title="{{ product.name }}">
           <img class="product-img" src="http://placehold.it/200x200" alt="{{ product.name }}">
           <h4 class="product-name">{{ product.name }}</h4>
-          <span style="display: none" class="product-name-index">{{ product.name-index }}</span>
         </a>
         <span class="product-price">{{ product.price }}</span><span class="product-price-unit">đ</span>
+        {% if product.remain == 'FALSE' %}
+        <img class="product-sold-out" src="http://placehold.it/20x20" alt="Het hang">
+        {% endif %}
+        <div style="display: none">
+          <span class="product-name-index">{{ product.name-index }}</span>
+          <span class="product-common">{{ product.common }}</span>
+        </div>
       </li>
       {% endfor %}
     </ul>
