--- a/keys/index.html
+++ b/keys/index.html
@@ -122,7 +122,7 @@ group: mainmenu
         </a>
         <span class="product-price">{{ product.price }}</span><span class="product-price-unit">đ</span>
         {% if product.remain == 'FALSE' %}
-        <img class="product-sold-out" src="http://placehold.it/20x20" alt="Het hang">
+        <img class="product-sold-out-label" src="http://placehold.it/20x20" alt="Het hang">
         {% endif %}
         <div style="display: none">
           <span class="product-name-index">{{ product.name-index }}</span>
