--- a/cars/index.html
+++ b/cars/index.html
@@ -10,13 +10,7 @@ Dịch vụ sửa khóa chuyên nghiệp Tiến Phát sửa khóa ô tô, nhận
 
 Các dòng xe phổ biến tại Việt Nam: Toyota, Trường Hải, GM Việt Nam, Ford, Vinaxuki, Suzuki, Vinamotor, Mercedes-Benz, VEAM, Honda, Vinastar, Isuzu, HINO, VMC, Hyundai, Mekong, SanYang, Samco,...
 
-<div class="call-now">
-	<h3>Gọi ngay</h3>
-	<div class="call-button">
-		<a href="tel:(+84)0905748973">
-			<h1>0905.748.973</h1> 
-		</a>
-	</div>
+<div class="product-box-list">
+	<ul class="products" id="car-keys">
+	</ul>
 </div>
-
-
