--- a/about/index.html
+++ b/about/index.html
@@ -18,10 +18,10 @@ group: mainmenu
 
 <p><strong>Liên hệ</strong><br>
 Tiệm Khoá Tiến Phát    
-ĐC: 05 Nguyễn Văn Cừ, TP. Buôn Ma Thuột, Tỉnh Đăk Lăk<br>
-ĐT: 05003 939 959      DĐ: 0905748973(Mr. Tiến)<br>
-Facebook page: <a href="https://www.facebook.com/tienphatexpertkeyworld">https://www.facebook.com/tienphatexpertkeyworld</a><br>
-Hotline: 0905 748973(Mr. Tiến)</p>
+ĐC: 10 Nguyễn Chí Thanh, TP. Buôn Ma Thuột, Tỉnh Đăk Lăk<br>
+ĐT1: 0942975959<br>
+ĐT2: 0905748973<br>
+Facebook page: <a href="https://www.facebook.com/tienphatexpertkeyworld">https://www.facebook.com/tienphatexpertkeyworld</a><br></p>
 <div id="product-featured">
 
 </div>
